##################################################
 Revision history for Log::Log4perl
##################################################

0.51 (not yet released)
TODO: * remove_appender
    * (ms) Added check to L4p::Util::module_available() returning true
           if the pm file is available in %INC, indicating that it has
           already been loaded. This fixes a problem when running L4p
           in a PAR binary.

0.50 (12/08/2004)
    * (ms) Added ':resurrect' source filter, which uncomments all lines
           starting with "###l4p". Can be used for hidden L4p statements,
           which are then activated by calling 
           'use Log::Log4perl qw(:resurrect)'.
    * (ms) Fixed Win32 test suite bug: File::Spec->catfile() returns '/'
           as a path separator on both Unix and Win32, while Log4perl's
           layouts (derived from caller() info) use '\' on Win32 and '/' 
           on Unix. Changed tests to only verify file name, not path.
    * (ms) Added 'appender_by_name()' to retrieve an appender defined
           in the configuration file by name later.
    * (ms) Added FAQ on "stubbing out" L4p macros in environments
           that don't have L4p installed.
    * (ms) Added convenience function appender_thresholds_adjust() to adjust 
           thresholds of chosen (or all) appenders
    * (ms) Got rid of Test::Simple dependency
    * (ms) Moved autoflush setting in L4p::Appender::File from log()
           to file_open(), running only once, not with every message.
    * (ms) Applied doc fixes suggested by Jon Bjornstad.
    * (ms) Added ScreenANSIColor appender to colorize messages based on
           their priority. See Log::Log4perl::Appender::ScreenANSIColor.

0.49 (11/07/2004)
    * (ms) init_and_watch() no longer die()s on reloading syntactically 
           wrong configuration files but issues a warning and then 
           reloads the last working config.
    * (ms) init() now also accepts an open file handle (passed in as a