@@ -2149,6 +2149,18 @@ the layout to the appender using the appender's C<layout()> object:
     $logger->debug("Blah");
         # => "2002/07/10 23:55:35 (test.pl:207)> Blah\n"
 
+It's also possible to remove appenders from a logger:
+
+    $logger->remove_appender($appender_name);
+
+will remove an appender, specified by name, from a given logger. 
+Please note that this does
+I<not> remove an appender from the system.
+To eradicate an appender from the system, 
+you need to call C<$logger->remove_appender($appender_name)> on every 
+logger in the system using the appender (as defined in the configuration)
+and then stomp out the appender by calling its DESTROY method.
+
 =head1 How about Log::Dispatch::Config?
 
 Tatsuhiko Miyagawa's C<Log::Dispatch::Config> is a very clever 
