@@ -12,7 +12,7 @@ use strict;
 # change 'tests => 1' to 'tests => last_test_to_print';
 #########################
 use Test;
-BEGIN { plan tests => 13 };
+BEGIN { plan tests => 14 };
 
 use Log::Log4perl qw(get_logger :levels);
 
@@ -27,7 +27,8 @@ ok(Log::Log4perl::Level::isGreaterOrEqual($ERROR, $FATAL));
 # Init logger
 ##################################################
 my $app = Log::Log4perl::Appender->new(
-    "Log::Log4perl::Appender::TestBuffer");
+    "Log::Log4perl::Appender::TestBuffer",
+    name => "A1");
 my $logger = get_logger("abc.def");
 $logger->add_appender($app);
 $logger->level($DEBUG);
@@ -103,3 +104,14 @@ $log8->debug("Is this it?");
 ok($app->buffer(), "DEBUG - Is this it?\n");
 $app->buffer("");
 
+##################################################
+# Remove appender
+##################################################
+$logger->remove_appender("A1");
+$logger_main->remove_appender("A1");
+$log8->debug("Is this it?");
+
+$app = Log::Log4perl->appenders()->{"A1"};
+
+ok($app->buffer(), "");
+$app->buffer("");
